...
    "add.screen.search.placeholder" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "検索"
...
            "value" : "Bought"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "購入"
          }
        }
      }
    },
    "button.title.add" : {
      "extractionState" : "manual",
...
            "value" : "Register Book"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "書籍の登録"
          }
        }
      }
    },
    "button.title.add_book.text" : {
      "extractionState" : "manual",
...
            "value" : "Delete"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "削除"
          }
        }
      }
    },
    "button.title.delete_book" : {
      "extractionState" : "manual",
...
            "value" : "Delete Book"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "書籍の削除"
          }
        }
      }
    },
    "button.title.edit_tag" : {
      "extractionState" : "manual",
...
            "value" : "Register"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "登録する"
          }
        }
      }
    },
    "button.title.rescan" : {
      "extractionState" : "manual",
...
            "value" : "Status"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ステータス"
          }
        }
      }
    },
    "reading_status.read" : {
      "extractionState" : "manual",
...
            "value" : "Detail"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "詳細"
          }
        }
      }
    },
    "screen.title.display_settings" : {
      "extractionState" : "manual",
...
            "value" : "Shelf"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "本棚"
          }
        }
      }
    },
    "screen.title.statistics" : {
      "extractionState" : "manual",
...
            "value" : "Statistics"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "振り返り"
          }
        }
      }
    },
    "screen.title.support" : {
      "extractionState" : "manual",
...
            "value" : "Tags"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "タグ"
          }
        }
      }
    },
    "shelf.screen.custom.filter" : {
      "extractionState" : "manual",
...
