...

            var body: some View {
                ZStack {
                    HStack(spacing: 24) {
                        Button(
                            action: { store.send(.screen(.onPreviousTapped)) },
                            label: { Image(systemName: "chevron.backward") }
                        )
                        .disabled(!store.previousEnabled)

                        Text(store.current.formatted(.dateTime.year()))
                            .font(.title)

                        Button(
                            action: { store.send(.screen(.onNextTapped)) },
                            label: { Image(systemName: "chevron.forward") }
                        )
                        .disabled(!store.nextEnabled)
                    }

                    HStack {
                        Spacer()
...
